third_party/move/move-compiler-v2/tests/checking/typing/lambda3.exp
// -- Model dump before first bytecode pipeline
module 0x8675309::M {
    public fun lambda_not_allowed() {
        {
          let _x: |u64|u64 = |i: u64| Add<u64>(i, 1);
          Tuple()
        }
    }
} // end 0x8675309::M

// -- Sourcified model before first bytecode pipeline
module 0x8675309::M {
    public fun lambda_not_allowed() {
        let _x = |i| i + 1;
    }
}


Diagnostics:
error: function values outside of inline functions not supported in this language version
   ┌─ tests/checking/typing/lambda3.move:77:18
   │
77 │         let _x = |i| i + 1; // expected lambda not allowed
   │                  ^^^^^^^^^
